fixing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ span {
 }
 .boardtext {
   margin: 0 0 10% 0;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 56px;
   font-family: "Philosopher", sans-serif;
@@ -248,7 +248,7 @@ span {
 @media (max-width: 768px) {
   .boardtext {
     margin: 0 0 7% 0;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 700;
     line-height: 56px;
     font-family: "Philosopher", sans-serif;
